# dwarf-bench

./: README.md  leaderboard.json  pyproject.toml
src/dwarf_bench/: __main__.py  cli.py  dataset.py  judge.py  results.py  runner.py
src/dwarf_bench/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
tests/: test_dataset.py  test_providers.py
